log/futures.0.3.31.log
[futures] download directory: /tmp/top100_artifacts/futures-0.3.31
+ curl -sL https://crates.io/api/v1/crates/futures/0.3.31/download
+ tar xzf -
+ cd /tmp/top100_artifacts/futures-0.3.31
+ cargo clean
     Removed 0 files
+ cargo +stable test ''
    Blocking waiting for file lock on package cache
    Updating crates.io index
    Blocking waiting for file lock on package cache
     Locking 75 packages to latest compatible versions
      Adding tokio v0.1.22 (available: v1.45.0)
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
   Compiling autocfg v1.4.0
   Compiling cfg-if v0.1.10
   Compiling libc v0.2.172
   Compiling maybe-uninit v2.0.0
   Compiling lazy_static v1.5.0
   Compiling futures v0.1.31
   Compiling semver-parser v0.7.0
   Compiling crossbeam-utils v0.7.2
   Compiling slab v0.4.9
   Compiling semver v0.9.0
   Compiling iovec v0.1.4
   Compiling rustc_version v0.2.3
   Compiling scopeguard v1.2.0
   Compiling log v0.4.27
   Compiling proc-macro2 v1.0.95
   Compiling byteorder v1.5.0
   Compiling tokio-executor v0.1.10
   Compiling unicode-ident v1.0.18
   Compiling bytes v0.4.12
   Compiling parking_lot_core v0.6.3
   Compiling parking_lot v0.9.0
   Compiling net2 v0.2.39
   Compiling num_cpus v1.16.0
   Compiling quote v1.0.40
   Compiling tokio-io v0.1.13
   Compiling memoffset v0.5.6
   Compiling smallvec v0.6.14
   Compiling syn v2.0.101
   Compiling mio v0.6.23
   Compiling lock_api v0.3.4
   Compiling crossbeam-epoch v0.8.2
   Compiling fnv v1.0.7
   Compiling tokio-sync v0.1.8
   Compiling tokio-reactor v0.1.12
   Compiling futures-sink v0.3.31
   Compiling futures-core v0.3.31
   Compiling futures-channel v0.3.31
   Compiling crossbeam-deque v0.7.4
   Compiling tokio-codec v0.1.2
   Compiling crossbeam-queue v0.2.3
   Compiling futures-io v0.3.31
   Compiling pin-project-lite v0.2.16
   Compiling pin-utils v0.1.0
   Compiling futures-task v0.3.31
   Compiling memchr v2.7.4
   Compiling tokio-threadpool v0.1.18
   Compiling mio-uds v0.6.8
   Compiling tokio-uds v0.2.7
   Compiling tokio-fs v0.1.7
   Compiling tokio-udp v0.1.6
   Compiling tokio-tcp v0.1.4
   Compiling tokio-current-thread v0.1.7
   Compiling tokio-timer v0.2.13
   Compiling assert_matches v1.5.0
   Compiling static_assertions v1.1.0
   Compiling tokio v0.1.22
   Compiling futures-macro v0.3.31
   Compiling pin-project-internal v1.1.10
   Compiling futures-util v0.3.31
   Compiling pin-project v1.1.10
   Compiling futures-executor v0.3.31
   Compiling futures v0.3.31 (/tmp/top100_artifacts/futures-0.3.31)
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `futures_test`
  --> tests/stream.rs:18:5
   |
18 | use futures_test::task::noop_context;
   |     ^^^^^^^^^^^^ use of unresolved module or unlinked crate `futures_test`
   |
help: there is a crate or module with a similar name
   |
18 - use futures_test::task::noop_context;
18 + use futures_task::task::noop_context;
   |

error[E0432]: unresolved import `futures_executor::ThreadPool`
  --> tests/stream.rs:17:5
   |
17 | use futures_executor::ThreadPool;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `ThreadPool` in the root
   |
note: found an item that was configured out
  --> /home/eddy/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/futures-executor-0.3.31/src/lib.rs:68:30
   |
68 | pub use crate::thread_pool::{ThreadPool, ThreadPoolBuilder};
   |                              ^^^^^^^^^^
note: the item is gated behind the `thread-pool` feature
  --> /home/eddy/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/futures-executor-0.3.31/src/lib.rs:65:7
   |
65 | #[cfg(feature = "thread-pool")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
error: could not compile `futures` (test "stream") due to 2 previous errors
warning: build failed, waiting for other jobs to finish...
+ RESULT=101
+ cd /tmp/top100_artifacts
+ rm -rf /tmp/top100_artifacts/futures-0.3.31
+ exit 101
